--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
-Revision history for App-wordlist
+Revision history for App-GamesWordlist
+
+0.13    2016-01-07 (PERLANCAR)
+
+        - Rename module/script from App::wordlist/wordlist to
+          App::GamesWordlist/games-wordlist. This is to make way for the new
+          App::wordlist which will be based on WordList::*.
+
 
 0.12    2016-01-04 (PERLANCAR)
 
