--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-GamesWordlist
 
+0.15    2016-01-18 (PERLANCAR)
+
+        - No functional changes.
+
+        - [build] Rebuild to fix POD section ordering.
+
+
 0.14    2016-01-07 (PERLANCAR)
 
 	- No functional changes.
