--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-GamesWordlist
 
+0.16    2016-02-14 (PERLANCAR)
+
+	- No functional changes.
+
+	- Adjust to App::lcpan::Call 0.07.
+
+
 0.15    2016-01-18 (PERLANCAR)
 
         - No functional changes.
